--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "frontier-forms",
+  "name": "@fairjungle/frontier-forms",
   "version": "0.1.2",
   "description": "The smartest web-forms.",
   "main": "dist/index.js",
-  "repository": "git@github.com:frontier-forms/frontier-forms.git",
+  "repository": "git@github.com:fairjungle/frontier-forms.git",
   "author": "Charly POLY <cpoly55@gmail.com>, Tom Chmelevskij <T.Chmelevskij@gmail.com>",
   "homepage": "https://frontier-forms.dev",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "license": "MIT",
   "private": false,
   "scripts": {
